--- a/app/assets/templates/workout-new-template.html.slim
+++ b/app/assets/templates/workout-new-template.html.slim
@@ -1,3 +1,8 @@
-select ng-model='workout.routine_id'
-  option ng-repeat='option in routines' value='{{option.id}}' {{option.name}}
-button ng-click="startWorkout()" Start
+.new-workout.row
+  form
+    select.col-xs-10.col-xs-offset-1 [
+      ng-model='workout.routine_id'
+      ng-options="option.name for option in routines track by option.id"
+    ]
+
+    button.col-xs-10.col-xs-offset-1 ng-click="startWorkout()" Start
