Basic UI flow complete and working

--- a/app/assets/templates/workout-new-template.html.slim
+++ b/app/assets/templates/workout-new-template.html.slim
@@ -1,7 +1,7 @@
 .new-workout.row
   form
     select.col-xs-10.col-xs-offset-1 [
-      ng-model='workout.routine_id'
+      ng-model='workout.routine'
       ng-options="option.name for option in routines track by option.id"
     ]
 
