--- a/app/assets/stylesheets/workouts/workout-set.scss
+++ b/app/assets/stylesheets/workouts/workout-set.scss
@@ -1,13 +1,48 @@
+.workout_set_header--top-band {
+  height: 12%;
+  max-height: 120px;
+  display: flex;
+  background-color: #666666;
+  font-size: 20px;
+  padding: 2px 2%;
+  color: #fcfcfc;
+  font-weight: bold;
+}
+
+.workout_set_header__progress {
+  margin-left: 40px;
+}
+
+.workout_set_header--bottom-band {
+  padding: 6px 2%;
+  height: 10%;
+  display: flex;
+  background-color: #acacac;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.workout_set_header__instructions {
+  margin-left: 40px;
+  white-space: nowrap;
+}
+
+.workout_set_body {
+  padding: 10px 2%;
+}
+
 .workout_set_body--summary-list {
   list-style: none;
   margin: 0;
   padding: 0;
   font-size: 24px;
   line-height: 30px;
+  display: flex;
 }
 
 .workout_set_body--summary-item {
   margin: 20px 0;
+  width: 50%;
 }
 
 .workout_set_body--summary-label {
@@ -38,7 +73,8 @@
 
   button {
     border-radius: 5px;
-    margin: 5px;
+    margin: 6px 10px;
+    margin-left: 0;
     width: 100px;
     height: 100px;
     font-size: 32px;
