--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,5 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
   body ng-app="YoungCoconut"
-    .container
+    .main-container
       = yield
